--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "judo-club-wallers-frontend",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "cypress:open": "cypress open",
+    "test": "cypress run",
+    "test:components": "cypress run --component"
   },
   "dependencies": {
     "vue": "^3.2.36"
@@ -14,7 +17,9 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "cypress": "^10.1.0",
     "eslint": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
     "vite": "^2.9.9"
