--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "bootstrap": "^5.2.0-beta1",
+    "firebase": "^9.8.3",
     "vue": "^3.2.36",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
