--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -13,7 +13,18 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Create .env file
+        uses: SpicyPizza/create-envfile@v1.3.0
+        with:
+          envkey_VITE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+          envkey_VITE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN}}
+          envkey_VITE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          envkey_VITE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET}}
+          envkey_VITE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+          envkey_VITE_APP_ID: ${{ secrets.FIREBASE_APP_ID}}
+          envkey_VITE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
       - name: Run E2E tests
         uses: cypress-io/github-action@v4.1.0
         with:
