--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
     "firebase": "^9.8.3",
     "vue": "^3.2.36",
